app/styles/main.css
html,
body {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}

body {
  position: relative;
  font-family: 'RobotoDraft', sans-serif;
  background-color: #E5E5E5;
  box-sizing: border-box;
  min-height: 100%;
}

body.open {
  overflow: hidden;
}

a, a:hover {
	color: white;
	text-decoration: none;
}

main {
  margin: 0 auto;
  /* Height of the header */
  padding: 60px 16px 16px 16px;
  min-height: 100%;
}

core-header-panel {
	height: 100%;
    overflow: auto;
    -webkit-overflow-scolling: touch;
    background-color: #ec407a;
}

core-toolbar {
	font-weight: 400;
	background-color: #c2185b;
	color: white;
}

.banner {
	width: 80%;
	margin: 72px auto;
	text-align: center;
	color: white;
}

/** Larger Screens - desktops and tablets **/
@media all and (min-width: 990px) {
  main {
    max-width: 864px;
    padding-top: 0;
    min-height: initial;
  }

  body {
    overflow-y: scroll;
  }
}

